# apps/pos-ipad/openapi/hbpos.openapi.json
@@ -1382,6 +1382,15 @@
               "type": "integer",
               "format": "int32"
             }
+          },
+          {
+            "name": "skip",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 0
+            }
           }
         ],
         "responses": {
